--- a/src/components/Player/Sidebar/Sidebar.css
+++ b/src/components/Player/Sidebar/Sidebar.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+  display: none;
+}
+
 .sidebar {
   height: 100vh;
   min-width: 230px;
@@ -8,6 +12,9 @@
 
   color: #fff;
   background-color: #040404;
+  overflow: auto;
+
+  margin-bottom: 65px;
 }
 
 .sidebar__logo {
